--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.14.187",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
